--- a/templates/hospital/cart.html
+++ b/templates/hospital/cart.html
@@ -8,14 +8,14 @@
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <style media="screen">
   body {
-  background-color: #b3eef7; /* Set your desired background color */
+  background: linear-gradient(135deg, #385a93, #9ab9ec); /* Set your desired background color */
   margin: 0; /* Remove default body margin */
   padding: 0; /* Remove default body padding */
 }
   .button {
   display: inline-block;
   border-radius: 4px;
-  background-color: #400655;
+  background-color: #140655;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -53,13 +53,13 @@
 }
 
 .button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #87cce3;
+  background-color: #140655;
+  color: white;
+  border: 2px solid #140655;
 }
 
 .button2:hover {
-  background-color: #75ccea;
+  background-color: #140655;
   color: white;
 }
 
