--- a/templates/hospital/doctor_base.html
+++ b/templates/hospital/doctor_base.html
@@ -195,9 +195,9 @@
     <ul>
       <a href="/doctor-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
       <a href="/doctor-patient"><i class="fas fa-question-circle"></i><span>Patients</span></a>
-      <a href="/doctor-consultation"><i class="fas fa-user-md"></i><span>Consultation</span> </a>
+      <a href="/upload-consultation-link"><i class="fas fa-user-md"></i><span>Consultation</span> </a>
       <a href="/doctor-appointment"><i class="fas fa-chalkboard-teacher"></i><span>Appointments</span></a>
-      <a href="/upload-reports"> <i class="fas fa-upload"></i><span>Upload</span></a>
+      <a href="/upload_prescription"> <i class="fas fa-upload"></i><span>Upload</span></a>
 
       <form id="logout_form" action="/logout" method="POST" style="display: inline;">
         {% csrf_token %}
