--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -42,7 +42,6 @@
     </div> -->
     <!-- Spinner End -->
 
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
@@ -71,8 +70,9 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="{% url 'adminlogin'%}" class="nav-item nav-link">ADMIN</a>
-                <a href="{% url 'doctorlogin'%}" class="nav-item nav-link">Doctor</a>
-                <a href="{% url 'patientlogin' %}" class="nav-item nav-link">Patient</a>
+                <a href="{% url 'registers'%}" class="nav-item nav-link">REGISTER</a>
+
+                <a href="{% url 'doctorlogin'%}" class="nav-item nav-link">LOGIN</a>
                 </div>
                 <a href="{% url 'pharmacylogin' %}" class="nav-item nav-link">PHARMACY</a>
             </div>
@@ -85,7 +85,7 @@
   <!-- Chatbot Icon -->
 <div>
     <a 
-      href="https://huggingface.co/spaces/abhiramaitexa1/medchat" 
+      href="https://www.chatbase.co/chatbot-iframe/o9XUlThCfg_7bd5wTIrjc" 
       style="
         width: 50px; 
         height: 50px; 
