--- a/templates/hospital/pharmacylogin.html
+++ b/templates/hospital/pharmacylogin.html
@@ -104,7 +104,7 @@
 
 <body>
   <div class="container">
-    <form action="pharmacy-home" method="post">
+    <form action="" method="post">
       {% csrf_token %}
       <h1>Pharmacy Login</h1>
       
