--- a/templates/hospital/doctor_wait_for_approval.html
+++ b/templates/hospital/doctor_wait_for_approval.html
@@ -35,9 +35,14 @@
     <p class="lead">Your Account is not approved till now <br><br>Our Team is checking your profile <br><br> Soon your Account will be confirmed !!!</p>
     <hr class="my-4">
     <p>Check Later</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/logout" role="button">Logout For Now</a>
-    </p>
+    <div class="navbar-nav" style="margin-left: 90%;">
+      <form action="/logout" method="POST" style="display: inline;">
+          {% csrf_token %}
+          <button type="submit" class="nav-item nav-link btn btn-link" style="padding: 0; border: none; background: none; color: inherit;">
+              Logout
+          </button>
+      </form>
+  </div>
   </div>
 
   {% include "hospital/footer.html" %}
