--- a/templates/hospital/my_order.html
+++ b/templates/hospital/my_order.html
@@ -5,7 +5,7 @@
   @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
   body {
-    background-color: #8C9EFF;
+    background-color: #3a76e0;
     font-family: 'Open Sans', sans-serif;
     padding-top: 20px; /* Add some padding at the top */
   }
