--- a/templates/hospital/payment_success.html
+++ b/templates/hospital/payment_success.html
@@ -4,12 +4,12 @@
 {% block content %}
 <style media="screen">
   body {
-    background-color: #f4f4f4;
+    background-color: #1069cf;
     font-family: Arial, sans-serif;
   }
 
   .success-page {
-    max-width: 400px;
+    max-width: 600px;
     margin: 100px auto; /* Center vertically and horizontally */
     text-align: center;
     background-color: #fff;
@@ -44,7 +44,7 @@
     margin: 20px auto;
     padding: 10px;
     color: #fff;
-    background-color: #47c7c5;
+    background-color: #0044cc;
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
@@ -53,7 +53,7 @@
 
   .btn-view-orders:hover,
   .btn-continue-shopping:hover {
-    background-color: #36a7a4;
+    background-color: #0033aa;
   }
 
   .btn-continue-shopping {
