--- a/templates/hospital/admin_dashboard_cards.html
+++ b/templates/hospital/admin_dashboard_cards.html
@@ -85,7 +85,7 @@
 
     .market-update-right i.fa.fa-user-o {
       font-size: 3em;
-      color: #64c6bf;
+      color: #0b948b;
       width: 80px;
       height: 80px;
       background: #fff;
@@ -99,7 +99,7 @@
 
     .market-update-right i.fa.fa-user-md {
       font-size: 3em;
-      color: #64c6bf;
+      color:#0b948b;
       width: 80px;
       height: 80px;
       background: #fff;
@@ -113,7 +113,7 @@
 
     .market-update-right i.fa.fa-calendar {
       font-size: 3em;
-      color: #64c6bf;
+      color: #0b948b;
       width: 80px;
       height: 80px;
       background: #fff;
