--- a/templates/hospital/patient_base.html
+++ b/templates/hospital/patient_base.html
@@ -227,6 +227,9 @@
           <span>Prescription</span>
         </a>
       </li>
+      <a href="/my-order"><i class="fas fa-shopping-bag"></i><span>Orders</span></a>
+
+      
       
     
 
