--- a/templates/hospital/patient_view_product.html
+++ b/templates/hospital/patient_view_product.html
@@ -311,7 +311,7 @@ body {
   </style>
 
 
-<li class="upper-links"><a class="links" href="/image">Image</a></li>
+<!-- <li class="upper-links"><a class="links" href="/image">Image</a></li> -->
 
 
   {%if products%}
@@ -355,6 +355,7 @@ body {
         </div>
       </div>
       </div>
+      
 <!-- card1 end -->
 {% if forloop.counter|divisibleby:"3" %}
     </div>
@@ -375,8 +376,11 @@ body {
     {%endfor%}
     {%endif%}
 </script>
+
+
 <br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br>
+
 
 
 
