--- a/templates/hospital/payment_success.html
+++ b/templates/hospital/payment_success.html
@@ -75,5 +75,8 @@
   <a href="/my-order" class="btn-view-orders">View Orders</a>
   <a href="/customer-home" class="btn-continue-shopping">Continue Shopping</a>
 </div>
+<div class="go-back">
+  <button onclick="window.history.back();">Go Back</button>
+</div>
 
 {% endblock content %}
