--- a/templates/hospital/pharmacy_base.html
+++ b/templates/hospital/pharmacy_base.html
@@ -82,7 +82,7 @@
 
 
   <div class="bs-example">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#60046c;">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: #02317b;">
       <a href="/" class="navbar-brand">Pharmacy</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,6 @@
           <a href="/pharmacyview-customer" class="nav-item nav-link">Patients</a>
           <a href="/pharmacy-view-booking" class="nav-item nav-link">Booking</a>
           <a href="/pharmacy-products" class="nav-item nav-link">Products</a>
-          <a href="/view-feedback" class="nav-item nav-link">Feedback</a>
         </div>
 
         <form action="/logout" method="post">
