--- a/templates/hospital/update_order.html
+++ b/templates/hospital/update_order.html
@@ -1,4 +1,4 @@
-{% extends 'hospital/admin_base.html' %}
+{% extends 'hospital/pharmacy_base.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -11,7 +11,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: -webkit-linear-gradient(left, #15156d, #4860bf);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -33,13 +33,14 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background:#4d85c5;
       color: #fff;
-      margin-left:100px;
+      margin-left:550px;
+
     }
 
     .menu {
-      top: 50px;
+      top: 100px;
     }
   </style>
 
