--- a/templates/hospital/footer.html
+++ b/templates/hospital/footer.html
@@ -13,7 +13,7 @@
 -----------------------------------------*/
     footer {
       padding: 0px 0px 0px 0px;
-      background-color: black;
+      background-color: rgb(0, 0, 0);
       margin: 0px;
     }
 
@@ -39,7 +39,7 @@
     }
 
     .fa-whatsapp {
-      background: #25d366;
+      background: #cd7ac5;
       color: white;
     }
 
