--- a/templates/hospital/my_order.html
+++ b/templates/hospital/my_order.html
@@ -12,7 +12,7 @@
 
   .container {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 600px;
   }
 
   .card {
@@ -162,7 +162,7 @@
                 </li>
                 <li class="col-md-4">
                     <div class="col"><strong>Status:</strong> <br> {{ order.status }} </div> <br>
-                    <h4><a href="{% url 'download-invoice' order.id product.id %}" class="btn-warning">Download Invoice</a></h4>
+                    <h4><a href="" class="btn-warning">Download Invoice</a></h4>
                 </li>
             </ul>
             <hr>
@@ -193,5 +193,8 @@
         </div>
     </article>
     {% endfor %}
+</div>
+<div class="go-back">
+  <button onclick="window.history.back();">Go Back</button>
 </div>
 {% endblock content %}
