--- a/templates/hospital/navbar.html
+++ b/templates/hospital/navbar.html
@@ -29,8 +29,8 @@
 
 
   <div class="bs-example">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#337AB7;">
-      <a href="/" class="navbar-brand">Hospital Management</a>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: #15156d;">
+      <a href="/" class="navbar-brand">Care Connect</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,7 +47,6 @@
 
         <div class="navbar-nav">
           <a href="/aboutus" class="nav-item nav-link">About Us</a>
-          <a href="/contactus" class="nav-item nav-link">Contact Us</a>
         </div>
 
       </div>
