--- a/templates/hospital/patient_address.html
+++ b/templates/hospital/patient_address.html
@@ -14,17 +14,18 @@
         justify-content: center; /* Horizontally center the content */
     }
 
-    .form-container {
-        width: 200%;  /* Use full width */
-        max-width: 800px; /* Maintain the max-width */
+        .form-container {
+        width: 200%;  
+        max-width: 800px; 
         padding: 40px;
-        background-color: white; /* Set background color to white */
+        background-color: white; 
         border-radius: 10px;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
-        margin: 0 auto; /* Center the container horizontally */
-        transform: translateX(-20%); /* Move the container slightly to the left */
+        margin: 100px auto; /* Increased margin-top to move it down */
+        transform: translateX(-20%);
     }
+
 
     .form-style-1 {
         margin: 0;
@@ -105,6 +106,7 @@
         margin-top: 10px;
         font-size: 24px;
         color: #180f0e;
+        bottom: -20px;
     }
 
     .no-products-message h1 {
@@ -139,9 +141,10 @@
         </form>
     {% else %}
         <div class="no-products-message">
-            <h1>Please Add Products In Your Cart</h1>
+            <h1>Please Add Products In Cart</h1>
         </div>
     {% endif %}
 </div>
+
 
 {% endblock content %}
