--- a/templates/hospital/pharmacy_products.html
+++ b/templates/hospital/pharmacy_products.html
@@ -26,7 +26,7 @@
       height: 70px;
       bottom: 60px;
       right: 60px;
-      background-color: red;
+      background-color: rgb(15, 54, 172);
       color: #FFF;
       border-radius: 50px;
       text-align: center;
