--- a/templates/hospital/prescription_list.html
+++ b/templates/hospital/prescription_list.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background: #d2d8e1; 
         }
         .container {
             width: 80%;
@@ -24,25 +25,25 @@
             margin: 20px 0;
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 3px solid #064784;
         }
         th, td {
             padding: 8px;
             text-align: left;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #5660ce;
         }
         .no-prescriptions {
             text-align: center;
             margin-top: 20px;
         }
         a.download-link {
-            color: #007bff;
+            color: #0033ff;
             text-decoration: none;
         }
         a.download-link:hover {
-            text-decoration: underline;
+            /* text-decoration: underline; */
         }
     </style>
 </head>
