--- a/templates/hospital/upload_prescription.html
+++ b/templates/hospital/upload_prescription.html
@@ -1,6 +1,7 @@
 {% extends 'hospital/doctor_base.html' %}
 {% block content %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,9 +19,8 @@
         }
 
         .container {
-            /* background-color: #3aa3ae; */
-            padding: 30px;
-            border-radius: 8px;
+            padding: 10px;
+            border-radius: 3px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 600px;
             margin: 0 auto;
@@ -33,7 +33,7 @@
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         .btn-upload {
@@ -63,11 +63,10 @@
 <br><br><br>
 <body>
     <div class="container" style="background-color: #3aa3ae;">
-        <h2 >Upload Prescription</h2>
-
+        <h2>Upload Prescription</h2>
     </div>
     <div class="container">
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data" id="prescription-form">
             {% csrf_token %}
             <div class="form-group">
                 {{ form.as_p }}
@@ -75,5 +74,18 @@
             <button type="submit" class="btn btn-upload">Upload</button>
         </form>
     </div>
+
+    <script>
+        document.getElementById("prescription-form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent default form submission
+            var form = this;
+
+            // Show success message before submitting
+            setTimeout(function() {
+                alert("Prescription uploaded successfully!");
+                form.submit(); // Submit the form after showing alert
+            }, 200);
+        });
+    </script>
 </body>
 {% endblock content %}
